examples/type_system/failing/161_tuple_destructure_concrete_mismatch_prefers_e300.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let (a, b) = 1
}
